fix: player progress bar is slow on mobile

--- a/src/music/index.scss
+++ b/src/music/index.scss
@@ -259,6 +259,10 @@
     text-overflow: ellipsis;
     overflow: hidden;
     cursor: pointer;
+
+    &:hover {
+        background-color: #3838389d;
+    }
 }
 
 .mini-player {
@@ -292,7 +296,7 @@
             overflow: hidden;
 
             &:hover {
-                background-color: rgba(255, 255, 255, .3);
+                background-color: rgba(255, 255, 255, .4);
             }
 
             .player-progress-bar {
